[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shared/tileset.svg" type="Texture" id=1]
[ext_resource path="res://Entities/Entities/StirlingEngineEntity.gd" type="Script" id=2]
[ext_resource path="res://Systems/Power/PowerSource.gd" type="Script" id=3]
[ext_resource path="res://Systems/GUIComponent.gd" type="Script" id=4]
[ext_resource path="res://Entities/Entities/StirlingEngineGUI.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Shutdown"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("PistonFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -33.3 ), Vector2( 0, -32 ), Vector2( 0, -2.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PistonBack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -63.3 ), Vector2( 0, -62 ), Vector2( 0, -32.3 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Work"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PistonFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.21, -2.3 ), Vector2( -0.166855, -34.2019 ), Vector2( 0, -2.16912 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PistonBack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.21, -32.375 ), Vector2( -0.21, -63.911 ), Vector2( -0.21, -32.37 ) ]
}

[node name="StirlingEngineEntity" type="StaticBody2D" groups=[
"gui_entities",
"power_sources",
]]
script = ExtResource( 2 )

[node name="EngineBase" type="Sprite" parent="."]
position = Vector2( 0, -5.332 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 449, 149, 102, 62 )

[node name="PistonBack" type="Sprite" parent="."]
position = Vector2( 0, -32.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 780, 139, 100, 27 )

[node name="PistonShaft" type="Sprite" parent="."]
position = Vector2( 0, -31.113 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 584, 119, 52, 70 )

[node name="PistonFront" type="Sprite" parent="."]
position = Vector2( 0, -2.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 669, 164, 102, 37 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -0.199272, 25.6034, -50.5698, -0.493885, -50.4295, -16.3487, -0.0589638, -40.6219, 50.0309, -16.489, 50.1712, -0.0729637 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shutdown = SubResource( 2 )
anims/Work = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="PowerSource" type="Node" parent="."]
script = ExtResource( 3 )
power_amount = 25.0

[node name="GUIComponent" type="Node" parent="."]
script = ExtResource( 4 )
GuiWindow = ExtResource( 5 )
[connection signal="power_updated" from="PowerSource" to="." method="_on_PowerSource_power_updated"]
[connection signal="gui_status_changed" from="GUIComponent" to="." method="_on_GUIComponent_gui_status_changed"]
